--- a/snkrlockerPLUS/style.css
+++ b/snkrlockerPLUS/style.css
@@ -44,3 +44,16 @@
     gap: 10px;
     margin-right: 30px;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+    -webkit-text-stroke: 1px white;
+}
+
+a:hover {
+    color:#8fb0ae; 
+    text-decoration:none; 
+    cursor:pointer;  
+    -webkit-text-stroke: 1px white;
+}
