--- a/snkrlockerPLUS/style.css
+++ b/snkrlockerPLUS/style.css
@@ -3,7 +3,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    font-family: fantasy;
+    font-family: 'Georgia';
 }
 
 .header {
@@ -30,18 +30,18 @@
     font-size: 100px;
     color: black;
     -webkit-text-stroke: 3px white;
-    font-family: fantasy;
     font-weight: bold;
     margin-left: 300px;
+    font-family: 'Helvetica';
 }
 
 .header ul {
     list-style: none;
     display: flex;
     align-items: center;
-    font-family: fantasy;
+
     font-weight: bold;
-    -webkit-text-stroke: 1px white;
+    -webkit-text-stroke: 0.5px white;
     font-size: 25px;
     gap: 10px;
     margin-right: 30px;
@@ -50,14 +50,14 @@
 a {
     color: inherit;
     text-decoration: none;
-    -webkit-text-stroke: 1px white;
+    -webkit-text-stroke: 0.5px white;
 }
 
 a:hover {
     color:#8fb0ae; 
     text-decoration:none; 
     cursor:pointer;  
-    -webkit-text-stroke: 1px white;
+    -webkit-text-stroke: 0.5px white;
 }
 
 .intro {
@@ -107,7 +107,7 @@ a:hover {
     font-family: 'Roboto';
     font-weight: bold;
     color: black;
-    background-color:#8c8f8f;
+    background-color: cyan;
     font-size: 20px;
     text-align: center;
     transform: scale(1.2);
@@ -117,4 +117,39 @@ a:hover {
 
 .intro-button:hover{
     background-color: white ;
+}
+
+.previews {
+    padding: 60px;
+    display: flex;
+    flex-direction: column;
+}
+
+.preview-header {
+    font-size: 60px;
+    color: black;
+    font-weight: bold;
+    font-family: 'Helvetica';
+    text-align: center;
+    -webkit-text-stroke: 2px #bcd3d4;
+}
+
+
+.previews img {
+    width: 400px;
+    height: auto;
+
+}
+
+.preview-images {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+figcaption {
+    background: rgba(0, 0, 0, 0.5);
+    color: #FFF;
+    position: relative;
+
 }
